Add mock data and swagger notation for some api
